k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: backend
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: backend
    spec:
      containers:
      - image: ghcr.io/henryosei/vramcalc:8492f272da70b09425167462982ce9aae565b26a
        name: vramcalc
        resources: 
          requests:
            memory: "100Mi"
          limits:
            memory: "100Mi"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8000
        readinessProbe:  
          httpGet:
            path: /healthz
            port: 8000
status: {}
